# Quackbox-Python-API

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml  python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
quackbox/: leaderboard.py  save_data.py
src/quackbox/: leaderboard.py  save_data.py
