[build-system]
requires = [
    "hatchling >= 1.26",
    "charset-normalizer",
    "certifi",
    "requests",
    "urllib3"
]
build-backend = "hatchling.build"

[project]
name = "quackbox"
version = "0.1.0"
authors = [
  { name="Sean O'Donnell", email="saoski88@gmail.com" },
]
description = "A library for game developers to easily communicate with the QuackBox."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/rit-coms/Quackbox-Python-API"
Issues = "https://github.com/rit-coms/Quackbox-Python-API/issues"